# dog-collar

./: .gitmodules
.circleci/: config.yml
ci/: build.sh
firmware/: CMakeLists.txt  child_secure_partition_manager.conf  nrf9160_pca20035ns.overlay  prj.conf
firmware/src/: activity_tracker.c  activity_tracker.h  battery_monitor.c  battery_monitor.h  ble.c  ble.h  gps.c  gps.h  main.c  server_upload.c  server_upload.h
proto/: dogcollar.proto
server/: go.mod  go.sum  main.go
server/dogcollar/: dogcollar.pb.go
